@@ -1,3 +1,8 @@
+2005-04-05 Paul Jakma <paul@dishone.st>
+
+	* zserv.c: print more helpful errors when we fail to successfully
+	  bind and listen on zserv socket. Closes bugzilla #163.
+
 2005-04-02 Andrew J. Schorr <ajschorr@alumni.princeton.edu>
 
 	* if_ioctl.c: (interface_list_ioctl) Use if_get_by_name_len.
