@@ -1,3 +1,8 @@
+2004-04-05 Paul Jakma <paul@dishone.st>
+
+	* vty.c: Improve logging of failures to open vty socket(s).
+	  See bugid #163.
+
 2005-04-02 Andrew J. Schorr <ajschorr@alumni.princeton.edu>
 
 	* if.h: Fix comments to reflect that if_lookup_by_name and
